--- a/.github/workflows/check_for_playstore_releases.yml
+++ b/.github/workflows/check_for_playstore_releases.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
       - uses: actions/setup-java@v1
