--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -168,7 +168,8 @@ jobs:
         run: ln -s /mnt/cache $HOME/
 
       - name: Downloading binary objects cache to $HOME/cache
-        run: rclone copy --fast-list --transfers=128 cache:kiwibrowser-ccache-${{ matrix.platform }} $HOME/cache
+      #   run: rclone copy --fast-list --transfers=128 cache:kiwibrowser-ccache-${{ matrix.platform }} $HOME/cache
+        run echo nothing
 
       - name: Checking available disk-space after downloading cache
         run: df -h
