--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -4,16 +4,16 @@ name: automatic build of apk
 # Controls when the action will run. Triggers the workflow on push or pull request events
 on:
   workflow_dispatch:
-  push:
-    paths-ignore:
-      - '*.md'
-      - '*.yml'
-    branches: [ master ]
-  pull_request:
-    paths-ignore:
-      - '*.md'
-      - '*.yml'
-    branches: [ master ]
+  #push:
+  #  paths-ignore:
+  #    - '*.md'
+  #    - '*.yml'
+  #  branches: [ master ]
+  #pull_request:
+  #  paths-ignore:
+  #    - '*.md'
+  #    - '*.yml'
+  #  branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
