--- a/.github/workflows/init-artifact.yml
+++ b/.github/workflows/init-artifact.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Uploading binary objects to cache
         uses: actions/upload-artifact@v2
         with:
-          name: kiwibrowser-ccache-${{ matrix.platform }}
+          name: kiwibrowser-ccache-${{ matrix.platform }}.tar.gz
           path: ~/cache.tar.gz
           retention-days: 2
 
