--- a/.github/workflows/init-artifact.yml
+++ b/.github/workflows/init-artifact.yml
@@ -44,8 +44,18 @@ jobs:
           path: ~/cache.tar.gz
           retention-days: 2
 
+      - uses: actions/download-artifact@v2
+        id: download
+        with:
+          name: kiwibrowser-ccache-${{ matrix.platform }}.tar.gz
+          path: ~
+
+      - name: 'Echo download path'
+        run: echo ${{steps.download.outputs.download-path}}
+
       - name: untar cache
         run: |
-          tar -zxvf $HOME/cache.tar.gz -C $HOME/cache
+          tar -zxvf ${{steps.download.outputs.download-path}} -C $HOME/cache
+          rm -rf ${{steps.download.outputs.download-path}}
           tree $HOME/cache
 
