--- a/.github/workflows/init-artifact.yml
+++ b/.github/workflows/init-artifact.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: untar cache
         run: |
-          ls -R
+          ls -R $HOME
           tar -zxvf $HOME/kiwibrowser-ccache-${{ matrix.platform }}.tar.gz -C $HOME/cache
           rm -rf $HOME/kiwibrowser-ccache-${{ matrix.platform }}.tar.gz
           tree $HOME/cache
