--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -259,6 +259,221 @@ jobs:
       - name: Compiling source-code (base)
         run: ninja -C ./secondary_disk/out/android_${{ matrix.platform }} base
 
+      - name: Compiling source-code (chrome_java)
+        run: ninja -C ./secondary_disk/out/android_${{ matrix.platform }} chrome_java
+
+      - name: tar cache
+        run: |
+          tar -zcvf $HOME/cache.tar.gz -C $HOME/cache .
+          du -sh $HOME/cache.tar.gz
+      - name: Uploading binary objects to cache
+        uses: actions/upload-artifact@v2
+        with:
+          name: kiwibrowser-ccache-${{ matrix.platform }}.tar.gz
+          path: ~/cache.tar.gz
+          retention-days: 2
+      - name: rm cache tar
+        run: rm -rf $HOME/cache.tar.gz
+
+  build2:
+    needs: build
+
+    # The type of runner that the job will run on
+    runs-on: ubuntu-18.04
+
+    strategy:
+      fail-fast: false
+      max-parallel: 4
+      matrix:
+        platform: [arm64]
+
+    # The GitHub Actions machines have a "slow disk", and a SSD "fast" disk.
+    # However, there is not enough space to do all the processing on the SSD.
+    
+    # We refer to the disks based on their name in /dev/disk
+    # /dev/disk/azure/root-part1 is / ("slow disk")
+    # /dev/disk/azure/resource-part1 is a 14 GB ephemeral SSD disk mounted in /mnt
+
+    # We store the source-code repository (kiwibrowser/src) on /dev/disk/azure/root-part1
+    # We store cache, dependencies and output on /dev/disk/azure/resource-part1 (SSD)
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - name: Initializing build
+        run: echo Initializing build for platform ${{ matrix.platform }}
+
+      - name: Reclaiming disk space on / by disabling swap partition
+        run: |
+          sudo swapoff -av
+          sudo rm -f /swapfile
+      - name: Reclaiming disk space on / by removing .NET framework
+        run: sudo rm -rf /usr/share/dotnet
+
+      - name: Checking-out source-code in $GITHUB_WORKSPACE
+        uses: actions/checkout@v2
+
+      - name: Creating secondary disk folder on /dev/disk/azure/resource-part1 (SSD)
+        run: |
+          sudo mkdir -p /extended_data
+          sudo chown -R runner:docker /extended_data
+      
+      # If you want to use only the SSD, you can use:
+      - name: On SSD - Creating symlink on /dev/disk/azure/root-part1 pointing to /dev/disk/azure/resource-part1
+        run: |
+          sudo ln -s /extended_data /mnt/secondary_disk
+          sudo ln -s /mnt/secondary_disk $GITHUB_WORKSPACE/
+      # or alternatively, to work on the main partition
+      # - name: On HDD - Creating symlink on /dev/disk/azure/root-part1 pointing to /dev/disk/azure/resource-part1
+      #  run: |
+      #    sudo ln -s /extended_data /mnt/secondary_disk
+      #    sudo ln -s /mnt/secondary_disk $GITHUB_WORKSPACE/
+
+      # We cannot checkout outside of $GITHUB_WORKSPACE, but we want to checkout to the SSD
+      # so we have a symbolic link $GITHUB_WORKSPACE/secondary_disk/ pointing to the SSD
+      # and checkout the code there
+      - name: Checking-out CIPD dependencies in /mnt/secondary_disk/.cipd
+        uses: actions/checkout@v2
+        with:
+          repository: kiwibrowser/dependencies
+          path: ./secondary_disk/.cipd 
+
+      - name: Linking .cipd in the proper path and copying .gclient and .gclient_entries
+        run: |
+          ln -s $GITHUB_WORKSPACE/./secondary_disk/.cipd ..
+          cp ../.cipd/.gclient ..
+          cp ../.cipd/.gclient_entries ..
+      - name: Installing rclone
+        run: curl https://rclone.org/install.sh | sudo bash -s beta
+
+      - name: Updating APT repository
+        run: sudo apt-get update
+
+      - name: Installing Python and OpenJDK
+        run: sudo apt-get install -y python openjdk-8-jdk-headless libncurses5 ccache
+
+      - name: Setting-up Java 8 as default Java provider
+        run: sudo update-java-alternatives --set java-1.8.0-openjdk-amd64
+
+      - name: Installing system dependencies
+        run: |
+          sudo bash install-build-deps.sh --no-chromeos-fonts
+          build/linux/sysroot_scripts/install-sysroot.py --arch=i386
+          build/linux/sysroot_scripts/install-sysroot.py --arch=amd64
+      - name: Creating output folder
+        run: mkdir -p secondary_disk/out/android_${{ matrix.platform }}
+
+      - name: Generating one-time APK signature key
+        run: keytool -genkey -v -keystore keystore.jks -alias dev -keyalg RSA -keysize 2048 -validity 10000 -storepass public_password -keypass public_password -dname "cn=Kiwi Browser (unverified), ou=Actions, o=Kiwi Browser, c=GitHub"
+
+      - name: Copying args.gn to target folder
+        run: cat .build/android_arm/args.gn | sed "s#target_cpu = \"arm\"#target_cpu = \"${{ matrix.platform }}\"#" | sed "s#android_default_version_name = \"Git\"#android_default_version_name = \"Git$(date '+%y%m%d')Gen${{ github.run_id }}\"#" > secondary_disk/out/android_${{ matrix.platform }}/args.gn
+
+      - name: Modifying args.gn (arm)
+        if: matrix.platform == 'arm'
+        run: sed -i "s#android_default_version_code = \"1\"#android_default_version_code = \"$(date '+%y%m%d')1\"#" secondary_disk/out/android_${{ matrix.platform }}/args.gn
+
+      - name: Modifying args.gn (arm64)
+        if: matrix.platform == 'arm64'
+        run: sed -i "s#android_default_version_code = \"1\"#android_default_version_code = \"$(date '+%y%m%d')2\"#" secondary_disk/out/android_${{ matrix.platform }}/args.gn
+
+      - name: Modifying args.gn (x86)
+        if: matrix.platform == 'x86'
+        run: sed -i "s#android_default_version_code = \"1\"#android_default_version_code = \"$(date '+%y%m%d')3\"#" secondary_disk/out/android_${{ matrix.platform }}/args.gn
+
+      - name: Modifying args.gn (x64)
+        if: matrix.platform == 'x64'
+        run: sed -i "s#android_default_version_code = \"1\"#android_default_version_code = \"$(date '+%y%m%d')4\"#" secondary_disk/out/android_${{ matrix.platform }}/args.gn
+
+      - name: Displaying args.gn
+        run: cat secondary_disk/out/android_${{ matrix.platform }}/args.gn
+
+      - name: Downloading depot_tools
+        working-directory: ./secondary_disk
+        run: git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
+
+      - name: Adding depot_tools to path
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+        run: echo "::add-path::$GITHUB_WORKSPACE/secondary_disk/depot_tools"
+
+      - name: Setting environment variables
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+        run: |
+          echo "::set-env name=CC::ccache clang -Qunused-arguments"
+          echo "::set-env name=CXX::ccache clang++ -Qunused-arguments"
+      - name: Checking available disk-space
+        run: df -h
+
+      - name: Creating rclone config
+        run: |
+          mkdir -p $HOME/.config/rclone/
+          echo '[cache]' > $HOME/.config/rclone/rclone.conf
+          echo 'type = sftp' >> $HOME/.config/rclone/rclone.conf
+          echo 'host = ${{ secrets.STORAGE_HOST }}' >> $HOME/.config/rclone/rclone.conf
+          echo 'user = storage' >> $HOME/.config/rclone/rclone.conf
+          echo 'key_pem = ${{ secrets.STORAGE_KEY }}' >> $HOME/.config/rclone/rclone.conf
+      - name: Creating cache folder on /dev/disk/azure/resource-part1 (SSD)
+        run: |
+          mkdir -p $HOME/cache
+      - name: Downloading binary objects cache to $HOME/cache
+        # run: rclone copy --fast-list --transfers=128 cache:kiwibrowser-ccache-${{ matrix.platform }} $HOME/cache
+        uses: actions/download-artifact@v2
+        with:
+          name: kiwibrowser-ccache-${{ matrix.platform }}.tar.gz
+          path: ~/
+      - name: untar cache
+        run: |
+          tar -xzvf $HOME/cache.tar.gz -C $HOME/cache
+          rm -rf $HOME/cache.tar.gz
+      - name: Checking available disk-space after downloading cache
+        run: df -h
+        
+      - name: Fetching number for the latest stable version of Chromium
+        run: curl "https://omahaproxy.appspot.com/all" | grep -Fi "android,stable" | cut -f3 -d"," | awk '{split($0,a,"."); print "MAJOR=" a[1] "\nMINOR=" a[2] "\nBUILD=" a[3] "\nPATCH=" a[4]}' > chrome/VERSION
+        
+      - name: Calculating cache size
+        run: du -csh $HOME/cache
+
+      - name: Creating ccache configuration
+        run: |
+          mkdir -p $HOME/.ccache/
+          echo 'compiler_check = none' >> $HOME/.ccache/ccache.conf
+          echo "stats = false" >> $HOME/.ccache/ccache.conf
+          echo 'max_size = 20G' >> $HOME/.ccache/ccache.conf
+          echo "base_dir = $HOME" >> $HOME/.ccache/ccache.conf
+          echo "cache_dir = $HOME/cache" >> $HOME/.ccache/ccache.conf
+          echo "hash_dir = false" >> $HOME/.ccache/ccache.conf
+      - name: Running gclient runhooks
+        run: |
+          gclient config https://github.com/qmwd2006/kiwibrowser
+          gclient runhooks
+          tree -L 2
+      - name: Gen LASTCHANGE
+        run: python ./build/util/lastchange.py ./build/util/LASTCHANGE
+
+      - name: Generating build files
+        run: gn gen ./secondary_disk/out/android_${{ matrix.platform }}
+
+      - name: Checking available disk-space before build cache
+        run: df -h
+
+      - name: Creating rclone config to upload the cache
+        if: ${{ github.repository_owner == 'kiwibrowser' }}
+        run: |
+          echo '[sync]' > $HOME/.config/rclone/rclone.conf
+          echo 'type = sftp' >> $HOME/.config/rclone/rclone.conf
+          echo 'host = ${{ secrets.STORAGE_HOST }}' >> $HOME/.config/rclone/rclone.conf
+          echo 'user = storage' >> $HOME/.config/rclone/rclone.conf
+          echo 'key_pem = ${{ secrets.STORAGE_KEY }}' >> $HOME/.config/rclone/rclone.conf
+      - name: Checking available disk-space before build
+        run: df -h
+
+      # We compile component by component as 6 hours is not enough for the initial build
+      # so we can snapshot between each component and continue further from the snapshot
+      - name: Compiling source-code (base)
+        run: ninja -C ./secondary_disk/out/android_${{ matrix.platform }} base
+
       - name: tar cache
         run: |
           tar -zcvf $HOME/cache.tar.gz -C $HOME/cache .
@@ -411,7 +626,6 @@ jobs:
           echo Compressing symbols...
           tar -czvf ./secondary_disk/out/android_${{ matrix.platform }}/apks/ChromePublic.native.mapping.tar.gz /tmp/extracted_symbols
           echo Compression completed.
-
       - name: Uploading APK
         uses: actions/upload-artifact@v1
         with:
@@ -423,7 +637,7 @@ jobs:
 
   sign_and_upload:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build2
 
     steps:
       - name: Installing rclone
