--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -435,10 +435,10 @@ jobs:
         run: ninja -C ./secondary_disk/out/android_${{ matrix.platform }} base
 
       - name: Compiling source-code (chrome_java)
-        run: ninja -C ./secondary_disk/out/android_${{ matrix.platform }} chrome_java
+        run: ninja -j 4 -C ./secondary_disk/out/android_${{ matrix.platform }} chrome_java
 
       - name: Compiling source-code (components/guest_view/renderer)
-        run: ninja -C ./secondary_disk/out/android_${{ matrix.platform }} components/guest_view/renderer
+        run: ninja -j 4 -C ./secondary_disk/out/android_${{ matrix.platform }} components/guest_view/renderer
 
       - name: tar cache
         run: |
