--- a/.github/workflows/download-artifact.yml
+++ b/.github/workflows/download-artifact.yml
@@ -30,7 +30,7 @@ jobs:
         uses: qmwd2006/actions-download-artifact
         with:
           workflow: $GITHUB_WORKFLOW
-          name: kiwibrowser-ccache-${{ matrix.platform }}.tar.gz
+          name: kiwibrowser-cache-${{ matrix.platform }}.tar.gz
           path: ~/
           workflow_conclusion: success，timeout
 
@@ -42,6 +42,7 @@ jobs:
           tree $HOME/cache
 
       - name: gen a file in cache
+        if: always()
         run: |
           touch $HOME/cache/.gitignore
           echo hello>$HOME/cache/$(date "+%Y%m%d-%H%M%S").txt
