--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -15,6 +15,8 @@ on:
   #    - '*.yml'
   #  branches: [ master ]
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-18.04
