--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -166,16 +166,19 @@ jobs:
         run: echo "HOME=$HOME" >> $GITHUB_ENV
         shell: bash
 
-      - name: download last cache
-        uses: qmwd2006/actions-download-artifact@master
+      - name: Download Release Asset
+        uses: i3h/download-release-asset@v1
         with:
-          workflow: download-artifact.yml
-          name: kiwibrowser-ccache-${{ matrix.platform }}.tar.gz
-          path: ${{env.HOME}}/
+          owner: qmwd2006
+          repo: actions-download-artifact
+          tag: ccache
+          file: /cache.tar.gz.*/
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: untar cache
         run: |
-          tar -xzvf $HOME/cache.tar.gz -C $HOME/cache
-          rm -rf $HOME/cache.tar.gz
+          ls cache.tar.gz.*>/dev/null 2>&1 && { cat cache.tar.gz.* | tar -zxf - -C $HOME/cache ; }
+          rm -rf cache.tar.gz.*
 
       - name: Checking available disk-space after downloading cache
         run: df -h
@@ -225,16 +228,32 @@ jobs:
       - name: tar cache
         if: always()
         run: |
-          tar -zcvf $HOME/cache.tar.gz -C $HOME/cache .
-          du -sh $HOME/cache.tar.gz
-      - name: Uploading binary objects to cache
-        uses: actions/upload-artifact@v2
+          tar -zcf - -C $HOME/cache . | split -b 1G - $HOME/cache.tar.gz.
+          du -sh $HOME/cache.tar.gz.*
+
+      - name: Delete Release First
+        if: always()
+        uses: dev-drprasad/delete-tag-and-release@v0.2.0
         with:
-          name: kiwibrowser-ccache-${{ matrix.platform }}.tar.gz
-          path: ~/cache.tar.gz
-          retention-days: 2
+          delete_release: true # default: false
+          tag_name: ccache # tag name to delete
+          # repo: <owner>/<repoName> # target repo (optional). defaults to repo running this action
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload binaries to release
+        if: always()
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ${{env.HOME}}/cache.tar.gz.*
+          file_glob: true
+          tag: ccache
+          overwrite: true
+          body: "cache.tar.gz"
+
       - name: rm cache tar
-        run: rm -rf $HOME/cache.tar.gz
+        run: rm -rf $HOME/cache.tar.gz.*
 
   build2:
     needs: build
@@ -378,16 +397,20 @@ jobs:
       - name: Creating symlink in $HOME/cache pointing to cache on /dev/disk/azure/resource-part1
         run: ln -s /mnt/cache $HOME/
 
-      - name: Downloading binary objects cache to $HOME/cache
-        # run: rclone copy --fast-list --transfers=128 cache:kiwibrowser-ccache-${{ matrix.platform }} $HOME/cache
-        uses: actions/download-artifact@v2
+      - name: Download Release Asset
+        uses: i3h/download-release-asset@v1
         with:
-          name: kiwibrowser-ccache-${{ matrix.platform }}.tar.gz
-          path: ~/
+          owner: qmwd2006
+          repo: actions-download-artifact
+          tag: ccache
+          file: /cache.tar.gz.*/
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: untar cache
         run: |
-          tar -xzvf $HOME/cache.tar.gz -C $HOME/cache
-          rm -rf $HOME/cache.tar.gz
+          ls cache.tar.gz.*>/dev/null 2>&1 && { cat cache.tar.gz.* | tar -zxf - -C $HOME/cache ; }
+          rm -rf cache.tar.gz.*
+
       - name: Checking available disk-space after downloading cache
         run: df -h
         
@@ -436,16 +459,32 @@ jobs:
       - name: tar cache
         if: always()
         run: |
-          tar -zcvf $HOME/cache.tar.gz -C $HOME/cache .
-          du -sh $HOME/cache.tar.gz
-      - name: Uploading binary objects to cache
-        uses: actions/upload-artifact@v2
+          tar -zcf - -C $HOME/cache . | split -b 1G - $HOME/cache.tar.gz.
+          du -sh $HOME/cache.tar.gz.*
+
+      - name: Delete Release First
+        if: always()
+        uses: dev-drprasad/delete-tag-and-release@v0.2.0
         with:
-          name: kiwibrowser-ccache-${{ matrix.platform }}.tar.gz
-          path: ~/cache.tar.gz
-          retention-days: 2
+          delete_release: true # default: false
+          tag_name: ccache # tag name to delete
+          # repo: <owner>/<repoName> # target repo (optional). defaults to repo running this action
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload binaries to release
+        if: always()
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ${{env.HOME}}/cache.tar.gz.*
+          file_glob: true
+          tag: ccache
+          overwrite: true
+          body: "cache.tar.gz"
+
       - name: rm cache tar
-        run: rm -rf $HOME/cache.tar.gz
+        run: rm -rf $HOME/cache.tar.gz.*
 
   build3:
     needs: build2
@@ -589,16 +628,20 @@ jobs:
       - name: Creating symlink in $HOME/cache pointing to cache on /dev/disk/azure/resource-part1
         run: ln -s /mnt/cache $HOME/
 
-      - name: Downloading binary objects cache to $HOME/cache
-        # run: rclone copy --fast-list --transfers=128 cache:kiwibrowser-ccache-${{ matrix.platform }} $HOME/cache
-        uses: actions/download-artifact@v2
+      - name: Download Release Asset
+        uses: i3h/download-release-asset@v1
         with:
-          name: kiwibrowser-ccache-${{ matrix.platform }}.tar.gz
-          path: ~/
+          owner: qmwd2006
+          repo: actions-download-artifact
+          tag: ccache
+          file: /cache.tar.gz.*/
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: untar cache
         run: |
-          tar -xzvf $HOME/cache.tar.gz -C $HOME/cache
-          rm -rf $HOME/cache.tar.gz
+          ls cache.tar.gz.*>/dev/null 2>&1 && { cat cache.tar.gz.* | tar -zxf - -C $HOME/cache ; }
+          rm -rf cache.tar.gz.*
+
       - name: Checking available disk-space after downloading cache
         run: df -h
         
@@ -708,18 +751,35 @@ jobs:
       - name: Compiling source-code (final stage)
         run: ninja -C ./secondary_disk/out/android_${{ matrix.platform }} chrome_public_apk
 
-      #- name: tar cache
-      #  run: |
-      #    tar -zcvf $HOME/cache.tar.gz -C $HOME/cache .
-      #    du -sh $HOME/cache.tar.gz
-      #- name: Uploading binary objects to cache
-      #  uses: actions/upload-artifact@v2
-      #  with:
-      #    name: kiwibrowser-ccache2-${{ matrix.platform }}.tar.gz
-      #    path: ~/cache.tar.gz
-      #    retention-days: 2
-      #- name: rm cache tar
-      #  run: rm -rf $HOME/cache.tar.gz
+      - name: tar cache
+        if: always()
+        run: |
+          tar -zcf - -C $HOME/cache . | split -b 1G - $HOME/cache.tar.gz.
+          du -sh $HOME/cache.tar.gz.*
+
+      - name: Delete Release First
+        if: always()
+        uses: dev-drprasad/delete-tag-and-release@v0.2.0
+        with:
+          delete_release: true # default: false
+          tag_name: ccache # tag name to delete
+          # repo: <owner>/<repoName> # target repo (optional). defaults to repo running this action
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload binaries to release
+        if: always()
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ${{env.HOME}}/cache.tar.gz.*
+          file_glob: true
+          tag: ccache
+          overwrite: true
+          body: "cache.tar.gz"
+
+      - name: rm cache tar
+        run: rm -rf $HOME/cache.tar.gz.*
 
       - name: Generating native symbols mapping
         run: |
