--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -42,7 +42,7 @@ jobs:
         uses: i3h/download-release-asset@v1
         with:
           owner: qmwd2006
-          # repo: actions-download-artifact
+          repo: download-release
           tag: ccache
           file: /cache.tar.gz.*/
           token: ${{ secrets.GITHUB_TOKEN }}
