--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           du -sh cache.tar.gz.*
           ls cache.tar.gz.*>/dev/null 2>&1 && { echo hello ; }
-          ls cache.tar.gz.*>/dev/null 2>&1 && { cat cache.tar.gz.* | tar -zxvf - -C $HOME/cache ; }
+          ls cache.tar.gz.*>/dev/null 2>&1 && { cat cache.tar.gz.* | tar -zxvf - -C $HOME/cache/ ; }
           rm -rf cache.tar.gz.*
 
       - name: Calculating cache size
