--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -57,7 +57,5 @@ jobs:
 
       - name: Calculating cache size
         run: |
-          tree
-          ls -alh $HOME/cache
-          ls $HOME/cache
-          du -csh $HOME/cache
+          ls $HOME/cache/
+          du -csh $HOME/cache/
